<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_30">

    <!--这块多写一层是因为Dialog宽度调整太麻烦，直接加一层会很方便-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logout_bg"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/log_out"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/sure_log_out"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_14"
            android:background="@color/almanac_fragment_content_dividline_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/logout_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_color_black" />

            <View
                android:layout_width="@dimen/dp_0_5"
                android:layout_height="match_parent"
                android:background="@color/almanac_fragment_content_dividline_color" />

            <TextView
                android:id="@+id/logout_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/text_color_black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>