<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/llHomeATHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="@color/color_bottom_tv"
            android:textSize="11sp"
            app:drawableTopCompat="@drawable/selector_one"
            tools:ignore="SmallSp" />


        <TextView
            android:id="@+id/llHomeATCalendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/project"
            android:textColor="@color/color_bottom_tv"
            android:textSize="11sp"
            app:drawableTopCompat="@drawable/selector_two"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/llHomeATObject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/official_account"
            android:textColor="@color/color_bottom_tv"
            android:textSize="11sp"
            app:drawableTopCompat="@drawable/selector_three"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/llHomeATMy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@color/color_bottom_tv"
            android:textSize="11sp"
            app:drawableTopCompat="@drawable/selector_four"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>