<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomDialogRv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/grayWhite"
    android:orientation="vertical"
    android:paddingVertical="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bottomDialogLlCollect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottomDialogIvCollect"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bottom_item"
                android:padding="11dp"
                android:src="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:id="@+id/bottomDialogTvCollect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/collection"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomDialogLlCopy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottomDialogIvCopy"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bottom_item"
                android:padding="12dp"
                android:src="@drawable/ic_collections_black_24dp" />

            <TextView
                android:id="@+id/bottomDialogTvCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/copy_link"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomDialogLlBrowser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottomDialogIvBrowser"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bottom_item"
                android:padding="12dp"
                android:src="@drawable/ic_account_blog_black_24dp" />

            <TextView
                android:id="@+id/bottomDialogTvBrowser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/browser_open"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomDialogLlShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottomDialogIvShare"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bottom_item"
                android:padding="12dp"
                android:src="@drawable/ic_bug_report_black_24dp" />

            <TextView
                android:id="@+id/bottomDialogTvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/tripartite_sharing"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/bottomDialogLlDynamic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottomDialogIvDynamic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bottom_item"
                android:padding="9dp"
                android:src="@drawable/ic_github_black_24dp"
                app:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/bottomDialogTvDynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/author_trends"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomDialogLlReload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottomDialogIvReload"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bottom_item"
                android:padding="9dp"
                android:src="@drawable/ic_github_black_24dp" />

            <TextView
                android:id="@+id/bottomDialogTvReload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/refresh"
                android:textColor="@color/text_color_dark"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

</LinearLayout>
